# game-of-life-rust-bevy

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.cargo/: config.toml.example
.github/workflows/: build.yml
src/: cell_system.rs  gui.rs  main.rs
webapp/: index.html
